# rushdul-ilm

./: .gitattributes  .gitignore  .graphifyignore  .mailmap  AGENTS.md  AGENT_RULES.md  AI_SYSTEM_PROMPT.md  CONTRIBUTING.md  GEMINI.md  INITIAL_CODEX_PROMPT.md  README.md  REPORT_DOC_RULES.md  SECURITY.md  SPRINT_SYSTEM.md  answers_history_feature_proposal.md  code_commenting_prompt.md  gemini_chat_history_P2.S5.SS1.MT1.md  gemini_chat_history_P3.S1.SS1.MT1.md  gemini_chat_history_P3.S1.SS1.MT3.md  gemini_chat_history_P3.S1.SS1.MT4.md  gemini_history.md  gemini_history_P1.S7.SS1.MT1.md  gemini_history_P1_S5_SS1_MT2.md  gemini_optimized.md  modularity_analysis_report.md
Report Documentation/: 01_PROJECT_OVERVIEW.md  02_ANDROID_APP_LAYER.md  03_KNOWLEDGE_INGESTION.md  04_TRANSLATION_PIPELINE.md  08_VIDEO_DATABASE.md  09_BACKEND_DOCKER.md
activity-logs/: ACTIVITY_LOG.md
android-app/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android-app/app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
backend/: .env  .env.example  Dockerfile  docker-compose.yml  download_indictrans2.py  download_model.py  download_qwen3_embed.py  download_tts.py  fastapi_server.py  fastapi_server_old.py  fastapi_server_old2.py  fastapi_server_old3.py  ingest_deoband.py  ingest_islamqa.py  local_models  output.md  output.txt  qdrant_test_query.py  rag_pipeline.py  rag_pipeline_only_ollama.py  rag_pipeline_upgraded.py  requirements.txt  requirements_indictrans2.txt  requirements_stt.txt  search-text-key.py  stt_service.py  test_memory_leak.py  test_model_move.py  (+6 more)
(+101 files in other folders)
